Infra: 환경 변수 설정
Former-commit-id: 9c65b2238c0410f7a71542700d1c5b2f8fd6c75e

--- a/docker-compose-ec2.yml
+++ b/docker-compose-ec2.yml
@@ -45,6 +45,19 @@ services:
       DB_NAME: ${DB_NAME}
       DB_USERNAME: ${DB_USERNAME}
       DB_PASSWORD: ${DB_PASSWORD}
+      JWT_SECRET: ${JWT_SECRET}
+      JWT_EXPIRATION: ${JWT_EXPIRATION}
+      MAIL_HOST: ${MAIL_HOST}
+      MAIL_PORT: ${MAIL_PORT}
+      MAIL_USERNAME: ${MAIL_USERNAME}
+      MAIL_PASSWORD: ${MAIL_PASSWORD}
+      EMBEDDER_URL: ${EMBEDDER_URL}
+      SESSION_TIMEOUT: ${SESSION_TIMEOUT}
+      MAX_SESSIONS_PER_USER: ${MAX_SESSIONS_PER_USER}
+      SESSION_CLEANUP_INTERVAL: ${SESSION_CLEANUP_INTERVAL}
+      ACCESS_TOKEN_EXPIRATION_MINUTES: ${ACCESS_TOKEN_EXPIRATION_MINUTES}
+      FASTAPI_SERVER_PORT: ${FASTAPI_SERVER_PORT}
+      API_KEY: $API_KEY
     # depends_on:
     #   - postgres
 
