--- a/backend/fastapi_ec2/requirements.txt
+++ b/backend/fastapi_ec2/requirements.txt
@@ -47,7 +47,7 @@ langchain-text-splitters==0.3.0
 langgraph==0.2.23
 langgraph-checkpoint==1.0.10
 langsmith==0.1.125
-llama_cpp_python==0.2.90
+# llama_cpp_python==0.2.90
 MarkupSafe==2.1.5
 matplotlib-inline==0.1.6
 mpmath==1.3.0
