--- a/backend/fastapi_ec2/requirements.txt
+++ b/backend/fastapi_ec2/requirements.txt
@@ -82,6 +82,7 @@ python-dateutil==2.8.2
 pytz==2024.2
 PyYAML==6.0.2
 pyzmq==25.1.0
+PyJWT==2.9.0
 regex==2024.9.11
 requests==2.32.3
 safetensors==0.4.5
