Hotfix: docker-compose DB_PORT => DB_PORT_FASTAPI로 변경
Former-commit-id: 79d1f34585623b40f94bd8648f6a8a200f1cdd80

--- a/docker-compose-ec2.yml
+++ b/docker-compose-ec2.yml
@@ -41,7 +41,7 @@ services:
       - app-network
     environment:
       DB_DOMAIN: ${DB_DOMAIN}
-      DB_PORT: ${DB_PORT_FASTAPI}
+      DB_PORT_FASTAPI: ${DB_PORT_FASTAPI}
       DB_NAME: ${DB_NAME}
       DB_USERNAME: ${DB_USERNAME}
       DB_PASSWORD: ${DB_PASSWORD}
