--- a/backend/fastapi_ec2/requirements.txt
+++ b/backend/fastapi_ec2/requirements.txt
@@ -5,11 +5,15 @@ annotated-types==0.7.0
 anyio==4.4.0
 asttokens==2.1.0
 async-timeout==4.0.3
+asyncpg==0.29.0
 attrs==24.2.0
+backcall==0.2.0
 certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
+colorama==0.4.6
 comm==0.1.3
+databases==0.9.0
 datasets==3.0.0
 debugpy==1.8.0
 decorator==5.1.1
@@ -29,7 +33,7 @@ httpcore==1.0.5
 httpx==0.27.2
 huggingface-hub==0.25.0
 idna==3.10
-importlib_metadata==6.8.0
+importlib-metadata==6.8.0
 ipykernel==6.25.1
 ipython==8.15.0
 jedi==0.19.0
@@ -47,14 +51,13 @@ langchain-text-splitters==0.3.0
 langgraph==0.2.23
 langgraph-checkpoint==1.0.10
 langsmith==0.1.125
-# llama_cpp_python==0.2.90
 MarkupSafe==2.1.5
 matplotlib-inline==0.1.6
 mpmath==1.3.0
 msgpack==1.1.0
 multidict==6.1.0
 multiprocess==0.70.16
-nest_asyncio==1.5.6
+nest-asyncio==1.5.6
 networkx==3.2.1
 numpy==1.26.3
 openai==1.47.1
@@ -67,22 +70,24 @@ pgvector==0.2.5
 pickleshare==0.7.5
 pillow==10.2.0
 platformdirs==4.0.0
-prompt_toolkit==3.0.39
+prompt-toolkit==3.0.39
 psutil==5.9.5
 psycopg==3.2.2
 psycopg-binary==3.2.2
 psycopg-pool==3.2.3
+psycopg2==2.9.9
 ptyprocess==0.7.0
-pure_eval==0.2.2
+pure-eval==0.2.2
 pyarrow==17.0.0
 pydantic==2.9.2
 pydantic_core==2.23.4
 Pygments==2.16.1
+PyJWT==2.9.0
 python-dateutil==2.8.2
 pytz==2024.2
+pywin32==306
 PyYAML==6.0.2
 pyzmq==25.1.0
-PyJWT==2.9.0
 regex==2024.9.11
 requests==2.32.3
 safetensors==0.4.5
@@ -95,14 +100,14 @@ sympy==1.12
 tenacity==8.5.0
 tiktoken==0.7.0
 tokenizers==0.19.1
-# torch==2.4.1+cpu
-# torchaudio==2.4.1+cpu
-# torchvision==0.19.1+cpu
+torch==2.4.1
+torchaudio==2.4.1
+torchvision==0.19.1
 tornado==6.3.3
 tqdm==4.66.5
 traitlets==5.11.2
 transformers==4.44.2
-# typing_extensions==4.8.0s
+typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
 uvicorn==0.30.6
