--- a/backend/fastapi_ec2/requirements.txt
+++ b/backend/fastapi_ec2/requirements.txt
@@ -86,7 +86,7 @@ PyJWT==2.9.0
 python-dateutil==2.8.2
 python-dotenv==1.0.1
 pytz==2024.2
-pywin32==306
+# pywin32==306
 PyYAML==6.0.2
 pyzmq==25.1.0
 regex==2024.9.11
