--- a/backend/fastapi_ec2/requirements.txt
+++ b/backend/fastapi_ec2/requirements.txt
@@ -85,6 +85,7 @@ Pygments==2.16.1
 PyJWT==2.9.0
 python-dateutil==2.8.2
 # python-dotenv==1.0.1
+python-multipart==0.0.12
 pytz==2024.2
 # pywin32==306
 PyYAML==6.0.2
