--- a/backend/fastapi_ec2/requirements.txt
+++ b/backend/fastapi_ec2/requirements.txt
@@ -19,6 +19,7 @@ decorator==5.1.1
 dill==0.3.8
 diskcache==5.6.3
 distro==1.9.0
+docx==0.2.4
 exceptiongroup==1.1.0
 executing==1.2.0
 fastapi==0.115.0
