--- a/backend/fastapi_ec2/requirements.txt
+++ b/backend/fastapi_ec2/requirements.txt
@@ -1,3 +1,7 @@
+absl-py==2.1.0
+ace_tools==0.0
+agents==1.4.0
+aiohappyeyeballs==2.4.0
 aiohttp==3.10.5
 aiosignal==1.3.1
 annotated-types==0.7.0
@@ -20,15 +24,24 @@ dill==0.3.8
 diskcache==5.6.3
 distro==1.9.0
 docx==0.2.4
-exceptiongroup==1.1.0
-executing==1.2.0
+exceptiongroup==1.2.2
+executing==2.1.0
 fastapi==0.115.0
 filelock==3.13.1
+flatbuffers==24.3.25
+fonttools==4.54.1
 fpdf==1.7.2
 frozenlist==1.4.1
 fsspec==2024.2.0
+gast==0.6.0
+google-pasta==0.2.0
 greenlet==3.1.1
+grpcio==1.66.2
+gym==0.26.2
+gym-notices==0.0.8
 h11==0.14.0
+h5py==3.12.1
+html5lib==1.1
 httpcore==1.0.5
 httpx==0.27.2
 huggingface-hub==0.25.0
