--- a/backend/fastapi_ec2/requirements.txt
+++ b/backend/fastapi_ec2/requirements.txt
@@ -23,7 +23,6 @@ decorator==5.1.1
 dill==0.3.8
 diskcache==5.6.3
 distro==1.9.0
-docx==0.2.4
 exceptiongroup==1.2.2
 executing==2.1.0
 fastapi==0.115.0
@@ -64,6 +63,7 @@ langchain-text-splitters==0.3.0
 langgraph==0.2.23
 langgraph-checkpoint==1.0.10
 langsmith==0.1.125
+lxml==5.3.0
 MarkupSafe==2.1.5
 matplotlib-inline==0.1.6
 mpmath==1.3.0
@@ -99,6 +99,7 @@ PyJWT==2.9.0
 python-dateutil==2.8.2
 # python-dotenv==1.0.1
 python-multipart==0.0.12
+python-docx==1.1.2
 pytz==2024.2
 # pywin32==306
 PyYAML==6.0.2
@@ -122,7 +123,7 @@ tornado==6.3.3
 tqdm==4.66.5
 traitlets==5.11.2
 transformers==4.44.2
-# typing_extensions==4.12.2
+typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
 uvicorn==0.30.6
