--- a/backend/fastapi_ec2/requirements.txt
+++ b/backend/fastapi_ec2/requirements.txt
@@ -97,7 +97,7 @@ pydantic_core==2.23.4
 Pygments==2.16.1
 PyJWT==2.9.0
 python-dateutil==2.8.2
-# python-dotenv==1.0.1
+python-dotenv==1.0.1
 python-multipart==0.0.12
 python-docx==1.1.2
 pytz==2024.2
