--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -33,15 +33,7 @@ http {
     server {
         listen 80;
         server_name j11b109.p.ssafy.io;
-        # 배포 시 리다이렉트 되도록
-        # return 301 https://$host$request_uri;
-        location /fastapi_ec2/ {
-            proxy_pass http://127.0.0.1:8100/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
+        return 301 https://$host$request_uri;
     }
 
     server {
