--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -55,6 +55,7 @@ http {
         location / {
             root /usr/share/nginx/html;
             index index.html index.html;
+            try_files $uri $uri/ /index.html;
             proxy_pass http://react_server;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
