--- a/frontend/here_law/dockerfile
+++ b/frontend/here_law/dockerfile
@@ -9,8 +9,11 @@ RUN npm run build
 
 FROM nginx:latest
 
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
 COPY --from=build /app/dist /usr/share/nginx/html
-#
+
+
 EXPOSE 3000
 
 CMD ["nginx", "-g", "daemon off;"]
