--- a/frontend/here_law/nginx.conf
+++ b/frontend/here_law/nginx.conf
@@ -3,4 +3,14 @@ server {
 
     root /usr/share/nginx/html;
     index index.html;
+
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
+
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+        try_files $uri =404;
+        expires 30d;
+        add_header Cache-Control "public, must-revalidate, proxy-revalidate";
+    }
 }
