Fix: case 수정 및 랜딩페이지 구현
Former-commit-id: 369316392c02de9c6bb2e3805b09c1ccd0f7d04e

--- a/backend/spring/src/main/resources/application.properties
+++ b/backend/spring/src/main/resources/application.properties
@@ -26,3 +26,6 @@ spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 
 spring.jackson.time-zone=Asia/Seoul
+
+spring.elasticsearch.rest.uris=http://localhost:9200
+spring.elasticsearch.index.prefix=here_law
