--- a/backend/spring/build.gradle
+++ b/backend/spring/build.gradle
@@ -53,6 +53,8 @@ dependencies {
 
 	implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final'
 	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
+
+	implementation 'com.fasterxml.jackson.core:jackson-databind'
 }
 
 tasks.named('test') {
