Feat: 소장 작성 형식 변경, main.py test 코드 추후 삭제 요망
Former-commit-id: a2b309810f883331fe6139be6ee432feedd1131e

--- a/docker-compose-ec2.yml
+++ b/docker-compose-ec2.yml
@@ -58,7 +58,9 @@ services:
       SESSIONS_CLEANUP_INTERVAL: ${SESSIONS_CLEANUP_INTERVAL}
       ACCESS_TOKEN_EXPIRE_MINUTES: ${ACCESS_TOKEN_EXPIRE_MINUTES}
       FASTAPI_SERVER_PORT: ${FASTAPI_SERVER_PORT}
-      API_KEY: $API_KEY
+      API_KEY: ${API_KEY}
+      CLOVA_URL: ${CLOVA_URL}
+      CLOVA_KEY: ${CLOVA_KEY}
     # depends_on:
     #   - postgres
 
