--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,6 +10,7 @@ events {
 }
 
 http {
+    include /home/ubuntu/j11b109/nginx/ip-block-list.conf;
     log_format main '$remote_addr - $remote_user [$time_local] "$request"'
                     '$status $body_bytes_sent "$http_referer"'
                     '"$http_user_agent" "$http_x_forwarded_for"';
@@ -39,6 +40,8 @@ http {
     server {
         listen 443 ssl;
         server_name j11b109.p.ssafy.io;
+
+        if ($bad_ip) { return 444; }
 
         ssl_certificate /etc/letsencrypt/live/j11b109.p.ssafy.io/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/j11b109.p.ssafy.io/privkey.pem;
