Hotfix: nginx.conf 수정
Former-commit-id: d5fc5c6ea0f4e92927e5d7f9e0d0fb133ab8c44c

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,8 +9,18 @@ events {
     worker_connections 1024;
 }
 
+geo $bad_ip {
+    130.61.136.166 1;
+    137.186.242.99 1;
+    59.23.39.135 1;
+    111.67.197.165 1;
+    121.64.180.235 1;
+    112.155.15.82 1;
+
+    default 0;
+}
+
 http {
-    include /home/ubuntu/j11b109/nginx/ip-block-list.conf;
     log_format main '$remote_addr - $remote_user [$time_local] "$request"'
                     '$status $body_bytes_sent "$http_referer"'
                     '"$http_user_agent" "$http_x_forwarded_for"';
@@ -41,7 +51,7 @@ http {
         listen 443 ssl;
         server_name j11b109.p.ssafy.io;
 
-        if ($bad_ip) { return 444; }
+        if ($bad_ip) { return 444 };
 
         ssl_certificate /etc/letsencrypt/live/j11b109.p.ssafy.io/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/j11b109.p.ssafy.io/privkey.pem;
