--- a/backend/fastapi_ec2/dockerfile
+++ b/backend/fastapi_ec2/dockerfile
@@ -3,6 +3,7 @@ WORKDIR /app
 
 COPY requirements.txt .
 
+RUN apt-get update && apt-get install -y libreoffice
 RUN pip install --no-cache-dir -r requirements.txt
 RUN pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
 
