--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,7 +7,9 @@ pipeline {
     }
 
     when {
-        branch 'origin/master'
+        expression {
+            return env.GIT_BRANCH == 'origin/master' || env.BRANCH_NAME == 'master'
+        }
     }
 
     stages {
