Hotfix: master 브랜치에만 반응하도록 & fastapi fonts dockerfile 추가
Former-commit-id: fdb729178aa665d01251871117aac1deca63eaa9

--- a/backend/fastapi_ec2/dockerfile
+++ b/backend/fastapi_ec2/dockerfile
@@ -3,7 +3,17 @@ WORKDIR /app
 
 COPY requirements.txt .
 
-RUN apt-get update && apt-get install -y libreoffice
+RUN apt-get update && apt-get install -y \
+    libreoffice \
+    wget \
+    uzip \
+    fonts-nanum \
+    --no-install-recommends
+
+RUN wget https://github.com/naver/nanumfont/releases/download/v1.0/NanumFont_TTF_ALL.zip -O /tmp/NanumFont.zip && \
+    unzip /tmp/NanumFont.zip -d /usr/share/fonts/truetype/nanum && \
+    fc-cache -fv && \
+    rm /tmp/NanumFont.zip
 RUN pip install --no-cache-dir -r requirements.txt
 RUN pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
 
