Hotfix: master 브랜치에만 반응하도록 & fastapi fonts dockerfile 추가
Former-commit-id: d328a432cbd35b1239000e45856df25a23f9ba65

--- a/backend/fastapi_ec2/dockerfile
+++ b/backend/fastapi_ec2/dockerfile
@@ -6,7 +6,7 @@ COPY requirements.txt .
 RUN apt-get update && apt-get install -y \
     libreoffice \
     wget \
-    uzip \
+    unzip \
     fonts-nanum \
     --no-install-recommends
 
