--- a/backend/fastapi_ec2/dockerfile
+++ b/backend/fastapi_ec2/dockerfile
@@ -3,15 +3,7 @@ WORKDIR /app
 
 COPY requirements.txt .
 
-RUN apt-get update && apt-get install -y \
-    libreoffice \
-    wget \
-    unzip \
-    fontconfig \
-    fonts-nanum \
-    --no-install-recommends
-
-RUN fc-cache-fv
+RUN apt-get update && apt-get install -y libreoffice
 
 RUN pip install --no-cache-dir -r requirements.txt
 
