Hotfix: font 수정
Former-commit-id: 46c9245a9ac9c8bf56af38c428e63432ca55f7aa

--- a/backend/fastapi_ec2/dockerfile
+++ b/backend/fastapi_ec2/dockerfile
@@ -8,7 +8,7 @@ RUN apt-get update && apt-get install -y \
     fontconfig \
     --no-install-recommends
 
-COPY /home/ubuntu/kbg_workspace/S11P21B109/backend/fastapi_ec2/font/NanumGothic.ttf /usr/share/fonts/truetype/nanum/NanumGothic.ttf
+COPY ./font/NanumGothic.ttf /usr/share/fonts/truetype/nanum/NanumGothic.ttf
 
 RUN fc-cache-fv
 
