--- a/jenkinsfile
+++ b/jenkinsfile
@@ -31,6 +31,7 @@ pipeline {
             steps {
                 script {
                     docker.withRegistry('https://index.docker.io/v1/', DOCKER_CREDENTIALS_ID) {
+                        echo "Loggig ${DOCKER_CREDENTIALS_ID}"
                         echo 'Logged in Dockerhub'
                     }
                 }
