--- a/jenkinsfile
+++ b/jenkinsfile
@@ -31,7 +31,7 @@ pipeline {
             steps {
                 script {
                     echo "DOCKER_CREDENTIALS_ID: ${DOCKER_CREDENTIALS_ID}"
-                    docker.withRegistry('https://index.docker.io/v1/', DOCKER_CREDENTIALS_ID) {
+                    docker.withRegistry('https://index.docker.io/v1/', env.DOCKER_CREDENTIALS_ID) {
                         echo 'Logged in Dockerhub'
                     }
                 }
