--- a/jenkinsfile
+++ b/jenkinsfile
@@ -30,18 +30,18 @@ pipeline {
         stage('Docker login') {
             steps {
                 script {
-                    echo "DOCKER_CREDENTIALS_ID: ${DOCKER_CREDENTIALS_ID}"
-                    docker.withRegistry('https://index.docker.io/v1/', DOCKER_CREDENTIALS_ID) {
-                            echo 'Logged in Dockerhub'
-                        }
-                    // try {
-                    //     docker.withRegistry('https://index.docker.io/v1/', DOCKER_CREDENTIALS_ID) {
+                    // echo "DOCKER_CREDENTIALS_ID: ${DOCKER_CREDENTIALS_ID}"
+                    // docker.withRegistry('https://index.docker.io/v1/', DOCKER_CREDENTIALS_ID) {
                     //         echo 'Logged in Dockerhub'
                     //     }
-                    // } catch (Exeption e) {
-                    //     echo "Docker login failed: ${e.getMessage()}"
-                    //     error "Docker login failed"
-                    // }
+                    try {
+                        docker.withRegistry('https://index.docker.io/v1/', DOCKER_CREDENTIALS_ID) {
+                            echo 'Logged in Dockerhub'
+                        }
+                    } catch (Exeption e) {
+                        echo "Docker login failed: ${e.getMessage()}"
+                        error "Docker login failed"
+                    }
                 }
             }
         }
