--- a/jenkinsfile
+++ b/jenkinsfile
@@ -38,9 +38,8 @@ pipeline {
                         docker.withRegistry('https://index.docker.io/v1/', DOCKER_CREDENTIALS_ID) {
                             echo 'Logged in Dockerhub'
                         }
-                    } catch (Exeption e) {
-                        echo "Docker login failed: ${e.getMessage()}"
-                        error "Docker login failed"
+                    } catch (err) {
+                        error "Docker login failed: ${err}"
                     }
                 }
             }
