--- a/jenkinsfile
+++ b/jenkinsfile
@@ -84,8 +84,8 @@ pipeline {
         stage ('Build and Push Docker Images') {
             steps {
                 script {
-                    // docker.withRegistry('https://index.docker.io/v1/', env.DOCKER_CREDENTIALS_ID) {
-                    withCredentials([usernamePassword(credentialsId: env.DOCKER_CREDENTIALS_ID, passwordVariable: 'DOCKER_PASSWORD', usernameVariable: 'DOCKER_USERNAME')]){
+                    docker.withRegistry('https://index.docker.io/v1/', env.DOCKER_CREDENTIALS_ID) {
+                    // withCredentials([usernamePassword(credentialsId: env.DOCKER_CREDENTIALS_ID, passwordVariable: 'DOCKER_PASSWORD', usernameVariable: 'DOCKER_USERNAME')]){
                     // Build spring image
                     dir('backend/spring') {
                         sh 'chmod +x gradlew'
