--- a/jenkinsfile
+++ b/jenkinsfile
@@ -27,6 +27,16 @@ pipeline {
                 }
             }
         }
+        stage('Check varibale') {
+            steps {
+                script {
+                    withCredentials([usernamePassword(credentialsId: env.DOCKER_CREDENTIALS_ID, passwordVariable: 'DOCKER_PASSWORD', usernameVariable: 'DOCKER_USERNAME')]){
+                        sh "echo Username: ${DOCKER_USERNAME}"
+                        sh "echo Password: ${DOCKER_PASSWORD}"
+                    }
+                }
+            }
+        }
         // stage('Docker login') {
         //     steps {
         //         script {
