--- a/jenkinsfile
+++ b/jenkinsfile
@@ -32,7 +32,7 @@ pipeline {
                 script {
                     withCredentials([usernamePassword(credentialsId: env.DOCKER_CREDENTIALS_ID, passwordVariable: 'DOCKER_PASSWORD', usernameVariable: 'DOCKER_USERNAME')]){
                         sh "echo Username: ${DOCKER_USERNAME}"
-                        sh "echo Password: ${DOCKER_PASSWORD}"
+                        sh "echo Password: ${DOCKER_PASSWORD.length()}"
                     }
                 }
             }
