--- a/jenkinsfile
+++ b/jenkinsfile
@@ -27,34 +27,34 @@ pipeline {
                 }
             }
         }
-        stage('Check varibale') {
-            steps {
-                script {
-                    withCredentials([usernamePassword(credentialsId: env.DOCKER_CREDENTIALS_ID, passwordVariable: 'DOCKER_PASSWORD', usernameVariable: 'DOCKER_USERNAME')]){
-                        sh "echo Username: ${DOCKER_USERNAME}"
-                        sh "echo Password: ${DOCKER_PASSWORD.length()}"
-                    }
-                }
-            }
-        }
-        // stage('Docker login') {
+        // stage('Check varibale') {
         //     steps {
         //         script {
-        //             // echo "DOCKER_CREDENTIALS_ID: ${DOCKER_CREDENTIALS_ID}"
-        //             // docker.withRegistry('https://index.docker.io/v1/', DOCKER_CREDENTIALS_ID) {
-        //             //         echo 'Logged in Dockerhub'
-        //             //     }
-        //             try {
-        //                 docker.withRegistry('https://index.docker.io/v1/', DOCKER_CREDENTIALS_ID) {
-        //                     echo 'Logged in Dockerhub'
-        //                 }
-        //             } catch (err) {
-        //                 echo "DOCKER_CREDENTIALS_ID: ${DOCKER_CREDENTIALS_ID}"
-        //                 error "Docker login failed: ${err}"
+        //             withCredentials([usernamePassword(credentialsId: env.DOCKER_CREDENTIALS_ID, passwordVariable: 'DOCKER_PASSWORD', usernameVariable: 'DOCKER_USERNAME')]){
+        //                 sh "echo Username: ${DOCKER_USERNAME}"
+        //                 sh "echo Password: ${DOCKER_PASSWORD.length()}"
         //             }
         //         }
         //     }
         // }
+        stage('Docker login') {
+            steps {
+                script {
+                    // echo "DOCKER_CREDENTIALS_ID: ${DOCKER_CREDENTIALS_ID}"
+                    // docker.withRegistry('https://index.docker.io/v1/', DOCKER_CREDENTIALS_ID) {
+                    //         echo 'Logged in Dockerhub'
+                    //     }
+                    try {
+                        docker.withRegistry('https://index.docker.io/v1/', DOCKER_CREDENTIALS_ID) {
+                            echo 'Logged in Dockerhub'
+                        }
+                    } catch (err) {
+                        echo "DOCKER_CREDENTIALS_ID: ${DOCKER_CREDENTIALS_ID}"
+                        error "Docker login failed: ${err}"
+                    }
+                }
+            }
+        }
         stage('Create .env') {
             steps {
                 script{
