--- a/jenkinsfile
+++ b/jenkinsfile
@@ -48,9 +48,9 @@ pipeline {
                         docker.withRegistry('https://index.docker.io/v1/', DOCKER_CREDENTIALS_ID) {
                             echo 'Logged in Dockerhub'
                         }
-                    } catch (err) {
+                    } catch (Exception e) {
                         echo "DOCKER_CREDENTIALS_ID: ${DOCKER_CREDENTIALS_ID}"
-                        error "Docker login failed: ${err}"
+                        error "Docker login failed: ${e.getMessage()}"
                     }
                 }
             }
