--- a/jenkinsfile
+++ b/jenkinsfile
@@ -27,16 +27,19 @@ pipeline {
                 }
             }
         }
-        // stage('Check varibale') {
-        //     steps {
-        //         script {
-        //             withCredentials([usernamePassword(credentialsId: env.DOCKER_CREDENTIALS_ID, passwordVariable: 'DOCKER_PASSWORD', usernameVariable: 'DOCKER_USERNAME')]){
-        //                 sh "echo Username: ${DOCKER_USERNAME}"
-        //                 sh "echo Password: ${DOCKER_PASSWORD.length()}"
-        //             }
-        //         }
-        //     }
-        // }
+        stage('Check varibale') {
+            steps {
+                script {
+                    withCredentials([usernamePassword(credentialsId: env.DOCKER_CREDENTIALS_ID, passwordVariable: 'DOCKER_PASSWORD', usernameVariable: 'DOCKER_USERNAME')]){
+                        sh "echo Username: ${DOCKER_USERNAME}"
+                        sh "echo Password: ${DOCKER_PASSWORD}"
+                        sh """
+                            echo "${DOCKER_PASSWORD}" | docker login -u "${DOCKER_USERNAME}" --password-stdin 
+                        """
+                    }
+                }
+            }
+        }
         stage('Docker login') {
             steps {
                 script {
