--- a/jenkinsfile
+++ b/jenkinsfile
@@ -33,9 +33,7 @@ pipeline {
                     withCredentials([usernamePassword(credentialsId: env.DOCKER_CREDENTIALS_ID, passwordVariable: 'DOCKER_PASSWORD', usernameVariable: 'DOCKER_USERNAME')]){
                         sh "echo Username: ${DOCKER_USERNAME}"
                         sh "echo Password: ${DOCKER_PASSWORD}"
-                        sh """
-                            echo "${DOCKER_PASSWORD}" | docker login -u "${DOCKER_USERNAME}" --password-stdin 
-                        """
+                        sh "sudo docker login -u ${DOCKER_USERNAME} -p ${DOCKER_PASSWORD}"
                     }
                 }
             }
