--- a/jenkinsfile
+++ b/jenkinsfile
@@ -33,7 +33,7 @@ pipeline {
                     withCredentials([usernamePassword(credentialsId: env.DOCKER_CREDENTIALS_ID, passwordVariable: 'DOCKER_PASSWORD', usernameVariable: 'DOCKER_USERNAME')]){
                         sh "echo Username: ${DOCKER_USERNAME}"
                         sh "echo Password: ${DOCKER_PASSWORD}"
-                        sh "sudo docker login -u ${DOCKER_USERNAME} -p ${DOCKER_PASSWORD}"
+                        sh "docker login -u ${DOCKER_USERNAME} -p ${DOCKER_PASSWORD}"
                     }
                 }
             }
