--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,7 +11,7 @@ events {
 
 
 http {
-    limit_req_zone $binary_remote_addr zone=one:10m rate=1r/s
+    limit_req_zone $binary_remote_addr zone=one:10m rate=1r/s;
 
     geo $bad_ip {
         130.61.136.166 1;
