--- a/backend/fastapi_ec2/requirements.txt
+++ b/backend/fastapi_ec2/requirements.txt
@@ -137,7 +137,7 @@ tenacity==8.5.0
 tensorboard==2.17.1
 tensorboard-data-server==0.7.2
 tensorflow==2.17.0
-tensorflow-io-gcs-filesystem==0.37.1
+# tensorflow-io-gcs-filesystem==0.37.1
 termcolor==2.4.0
 tiktoken==0.7.0
 tinycss2==1.3.0
