저장 경로 수정
Former-commit-id: 21e0717bcb2a63db981db9f3bf0b4f01c6da9ba0

--- a/docker-compose-ec2.yml
+++ b/docker-compose-ec2.yml
@@ -29,9 +29,8 @@ services:
       MAIL_PORT: ${MAIL_PORT}
       MAIL_USERNAME: ${MAIL_USERNAME}
       MAIL_PASSWORD: ${MAIL_PASSWORD}
-    # depends_on:
-    #   - postgres
-    #   - elasticsearch
+    volumes:
+      - ~/here_law_profile_img:/app/here_law_profile_img
   
   fastapi:
     image: happyyongku/j11b109:fastapi
