--- a/backend/fastapi_ec2/dockerfile
+++ b/backend/fastapi_ec2/dockerfile
@@ -12,6 +12,8 @@ COPY ./font/NanumGothic.ttf /usr/share/fonts/truetype/nanum/NanumGothic.ttf
 
 RUN fc-cache -fv
 
+RUN pip install llama-cpp-python --extra-index-url https://abetlen.github.io/llama-cpp-python/whl/cpu
+
 RUN pip install --no-cache-dir -r requirements.txt
 
 RUN pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
