--- a/backend/fastapi_ec2/requirements.txt
+++ b/backend/fastapi_ec2/requirements.txt
@@ -70,7 +70,7 @@ langgraph==0.2.23
 langgraph-checkpoint==1.0.10
 langsmith==0.1.125
 libclang==18.1.1
-llama_cpp_python==0.2.90
+# llama_cpp_python==0.2.90
 lxml==5.3.0
 Markdown==3.7
 markdown-it-py==3.0.0
@@ -145,8 +145,8 @@ sympy==1.12
 tenacity==8.5.0
 tensorboard==2.17.1
 tensorboard-data-server==0.7.2
-tensorflow==2.17.0
-tensorflow-io-gcs-filesystem==0.37.1
+# tensorflow
+# tensorflow-io-gcs-filesystem
 termcolor==2.4.0
 threadpoolctl==3.5.0
 tiktoken==0.7.0
