--- a/frontend/here_law/package.json
+++ b/frontend/here_law/package.json
@@ -19,7 +19,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "redux": "^5.0.1",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "react-markdown": "^9.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
